# mnemos

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  README.md  build.zig  build.zig.zon  hemis-mcp-context.md  lauri-full-context.md
.claude/commands/: add-rpc-method.md  backend-status.md  build.md  debug-test.md  fix-test.md  rpc-debug.md  test-all.md  ui-parity.md  update-snapshots.md
.claude/rules/: demo-permission.md  mcp-critical.md
backend/: Cargo.toml  build.rs
backend/crates/git/src/: lib.rs
backend/crates/index/: Cargo.toml
backend/crates/index/src/: lib.rs
backend/crates/index/tests/: embedder.rs
backend/crates/notes/: Cargo.toml
backend/crates/notes/src/: lib.rs
backend/crates/notes/tests/: notes_git.rs
backend/crates/rpc/src/: lib.rs
backend/crates/rpc/tests/: malformed.rs  parse.rs
backend/crates/storage/: Cargo.toml
backend/crates/storage/src/: lib.rs
backend/crates/treesitter/: Cargo.toml
backend/crates/treesitter/src/: config.rs  grammar.rs  lib.rs  parser.rs  position.rs
backend/src/: ai_cli.rs  config.rs  display.rs  events.rs  jobs.rs  lib.rs  main.rs  preload.rs  server.rs  snapshot.rs  version.rs  watcher.rs
backend/tests/: cli_snapshot.rs  error_paths.rs  preload.rs  rpc_flow.rs  rpc_snapshot.rs  schema_migration.rs  snapshot_restore.rs  snapshot_roundtrip.rs
backend/tests/fixtures/test_grammar/: README.md  grammar.js
backend/tests/fixtures/test_grammar/src/: grammar.json  node-types.json  parser.c
backend/tests/snapshots/: rpc_snapshot__backlinks.snap  rpc_snapshot__create_and_list.snap  rpc_snapshot__explain_region.snap  rpc_snapshot__index_project.snap  rpc_snapshot__index_search.snap  rpc_snapshot__invalid_params.snap  rpc_snapshot__list_by_node.snap  rpc_snapshot__list_files.snap  rpc_snapshot__missing_id_update_delete.snap  rpc_snapshot__snapshot_save_load.snap  rpc_snapshot__snapshot_status.snap  rpc_snapshot__unknown_method.snap  rpc_snapshot__update_and_delete.snap
backend/tools/hemis_mcp/: Cargo.toml
backend/tools/hemis_mcp/src/: main.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs
crates/git_support/: Cargo.toml
crates/git_support/src/: lib.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/index/tests/: embedder.rs  search.rs
crates/notes/: Cargo.toml
crates/notes/src/: lib.rs
crates/notes/tests/: notes_git.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs
crates/rpc/tests/: framed.rs  parse.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: ARCHITECTURE.md  DEMO.md  DOOM-EMACS.md  NEOVIM-PLAN.md  NEOVIM.md  PROTOCOL.md  TESTING.md  TODO.md  VSCODE-PLAN.md  ai-notification-timing-brief.md  github-readme-video.md  hemis-architecture-brief.md  mnemos-architecture-brief.md  zed-extension-analysis.md
docs/legacy/: 00-overview.md  01-architecture.md  02-processes.md  03-llm-flow.md  04-indexing.md  05-tools.md  06-startup.md  07-config.md  08-storage-layout.md  09-ui-bridge.md  10-embedding-system.md  Mnemos-Book.md
docs/legacy/examples/lisp/: hemis-core.lisp  hemis-llm-client.lisp  hemis-server.lisp  hemis-tools.lisp  mnemos-config.lisp  mnemos-core.lisp  mnemos-index.lisp  mnemos-llm-client.lisp  mnemos-server.lisp  mnemos-tools.lisp
docs/legacy/examples/react/: App.tsx  HemisClient.ts  MnemosClient.ts  rpc.ts
docs/legacy/examples/schemas/: rpc-spec.json
emacs/: README.md  TESTING.md  hemis.el
emacs/doom/tools/hemis/: config.el  packages.el
emacs/tests/: hemis-test.el
hemis-project/: README.md
hemis-project/backend/: hemis.lisp  test-notes.lisp
hemis-project/frontend/: index.html  package.json
hemis-project/frontend/src/: App.tsx
hemis-spec/: Hemis-Book.md
hemis-spec/code/lisp/: hemis-config.lisp  hemis-index.lisp
hemis-spec/code/react/: App.tsx
hemis-spec/code/schemas/: rpc-spec.json  tool-schemas.json
hemis-spec/docs/: 00-overview.md  01-architecture.md  02-processes.md  03-llm-flow.md  04-indexing.md  05-tools.md  06-startup.md  07-config.md  08-storage-layout.md  10-embedding-system.md  11-snapshots.md
scripts/: check_parens.py  run-rust-tests.sh  run-tests.sh
src/: ai.zig  git.zig  grammar.zig  main.zig  paths.zig  proptest.zig  rpc.zig  server.zig  storage.zig  treesitter.zig  version.zig  watcher.zig
src/util/: quickcheck.zig
ui/common/: UI-SPEC.md  display-config.json  test-fixtures.json
ui/emacs/: README.md  TESTING.md  hemis.el  mnemos.el
ui/emacs/doom/tools/hemis/: config.el  init.el  packages.el
ui/emacs/doom/tools/mnemos/: config.el  init.el  packages.el
ui/emacs/tests/: hemis-test.el  mnemos-test.el
ui/neovim/: README.md  lazy-config.lua
ui/neovim/lua/hemis/: commands.lua  config.lua  display.lua  events.lua  init.lua  notes.lua  rpc.lua  treesitter.lua
ui/neovim/lua/mnemos/: commands.lua  config.lua  display.lua  events.lua  init.lua  notes.lua  rpc.lua
ui/neovim/plugin/: hemis.lua  mnemos.lua
ui/neovim/tests/: display_spec.lua  explain_region_e2e_spec.lua  helpers.lua  hemis_spec.lua  integration_spec.lua  minimal_init.lua  run.lua  simple_e2e.lua  visual_e2e_spec.lua
ui/neovim/tests/snapshots/: multiline_note_text.snap  multiple_notes_display.snap  single_note_display.snap  stale_note_indicator.snap
ui/vscode/: .eslintrc.json  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
ui/vscode/src/: commands.ts  config.ts  debug.ts  decorations.ts  events.ts  extension.ts  notes.ts  rpc.ts
ui/vscode/src/providers/: notesView.ts
ui/vscode/test/: runTest.ts
ui/vscode/test/e2e/: playwright.config.ts  visual.e2e.ts
ui/vscode/test/suite/: decorations.test.ts  index.ts  integration.test.ts  rpc.test.ts  stubbed.test.ts
