[workspace]
members = [
  "backend",
  "crates/notes",
  "crates/index",
  "crates/git",
  "crates/storage",
  "crates/rpc"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Joel Reymont <18791+joelreymont@users.noreply.github.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
time = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
git2 = "0.18"
tempfile = "3"
insta = { version = "1", features = ["json"] }
serde_path_to_error = "0.1"
