[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "hemis"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rpc = { path = "crates/rpc" }
notes = { path = "crates/notes" }
index = { path = "crates/index" }
storage = { path = "crates/storage" }
git = { path = "crates/git" }
treesitter = { path = "crates/treesitter" }
rusqlite = { workspace = true }
memchr = "2"
dirs = "5"
atty = "0.2"
notify = "6"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
serde_json = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }
regex = "1"
