[package]
name = "index"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
storage = { path = "../storage" }
rusqlite = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
