[package]
name = "notes"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
git = { path = "../git" }
storage = { path = "../storage" }
git2 = { workspace = true }
tempfile = { workspace = true }
uuid = { version = "1.10", features = ["v4"] }
rusqlite = { workspace = true }
regex = "1"
once_cell = "1"
