[package]
name = "treesitter"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
tree-sitter = "0.24"
sha2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = "0.8"
dirs = "5"
libloading = "0.8"
lru = "0.12"

# Bundled grammars (compiled into binary)
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-lua = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
