[package]
name = "hemis-mcp"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "hemis-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
regex = "1"
